<resources>
    <string name="app_name">Tomato</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="siram">Siram</string>
    <string name="stop">Stop</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>