<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-224dp">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/tulisan4" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/tomato" />

        <EditText
            android:id="@+id/EmailAddress"
            tools:targetApi="P"
            android:layout_width="325dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@drawable/et_bg"
            android:hint="Email Address"
            android:textColorHint="@color/login_form_details"
            android:paddingLeft="15dp"
            android:selectAllOnFocus="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/login_form_details"/>

        <EditText
            android:id="@+id/password"
            tools:targetApi="P"
            android:layout_width="325dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_bg"
            android:hint="@string/password"
            android:textColorHint="@color/login_form_details"
            android:inputType="textPassword"
            android:textColor="@color/login_form_details"
            android:paddingLeft="15dp"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"/>

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:indeterminateTint="@color/login_form_details"
            tools:targetApi="lollipop"
            android:visibility="gone"/>

        <Button
            android:id="@+id/login"
            android:layout_width="330dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/login_form_details_medium"
            tools:targetApi="P"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/login_form_details"
            android:linksClickable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="155dp"
        android:gravity="center"
        android:background="@drawable/et_bg"
        android:orientation="vertical">

        <View
            android:id="@+id/footer_line"
            android:layout_width="450dp"
            android:layout_height="1dp"
            android:layout_marginTop="-8dp"
            android:background="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="11dp"
            android:textColor="@color/login_form_details_medium"
            android:layout_marginStart="-30dp" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:layout_marginLeft="78dp"
            android:text="@string/sign_up"
            android:textColor="@color/login_form_details"
            android:textStyle="bold"
            android:layout_marginStart="78dp"
            android:linksClickable="true"/>
    </LinearLayout>
</RelativeLayout>